Updated edit overflow styling bug PM-1055

--- a/quote-requirements/src/styles/editForm.scss
+++ b/quote-requirements/src/styles/editForm.scss
@@ -3,7 +3,6 @@ $border-color: #eeeeee;
 
 .edit-form {
     overflow: hidden;
-    float: left;
     width: 100%;
     padding-top: 15px;
     background: $background-color;
